--- a/mods/mods/statuses/BattleNetwork6.Statuses.Cage/package.toml
+++ b/mods/mods/statuses/BattleNetwork6.Statuses.Cage/package.toml
@@ -3,9 +3,7 @@ category = "status"
 id = "BattleNetwork6.Statuses.Cage"
 name = "Cage Status"
 description = "Not accurate, but useful for co-op"
-preview_texture_path = "preview.png"
+icon_texture_path = "icon.png"
 flag_name = "Cage"
-blocks_flags = []
-blocked_by = []
 blocks_actions = true
 blocks_mobility = true
